ref: refactor for warning